--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
 <meta property="og:title" content="🔥Like🔥">
 <meta property="og:description" content="💥Super💥">
-<meta property="og:image" content="https://i.imgur.com/dFTHRP5.jpg">
+<meta property="og:image" content="https://krasivosti.pro/uploads/posts/2021-04/1618581281_44-krasivosti_pro-p-zlaya-lvitsa-lvi-krasivo-foto-52.jpg">
   <title>New Promotion</title>
   <meta name="description" content="Promo">
   <meta name="keywords" content="Beauty">
